@@ -30,20 +30,24 @@ unsigned int ftest2u(unsigned int x)
   return (x ^ 0x1234) ^ (unsigned int)INT_MIN;
 }
 
+#if 0 // This tests triggers signed integer overflow, which is undefined behaviour in C (though GCC apparently makes it implementation-defined, and tests for the implementation-defined behaviour here).
 int ftest3(int x)
 {
   return (x + INT_MIN) ^ 0x1234;
 }
+#endif
 
 unsigned int ftest3u(unsigned int x)
 {
   return (x + (unsigned int)INT_MIN) ^ 0x1234;
 }
 
+#if 0 // This tests triggers signed integer overflow, which is undefined behaviour in C (though GCC apparently makes it implementation-defined, and tests for the implementation-defined behaviour here).
 int ftest4(int x)
 {
   return (x ^ 0x1234) + INT_MIN;
 }
+#endif
 
 unsigned int ftest4u(unsigned int x)
 {
@@ -59,8 +63,7 @@ unsigned int ftest6u(unsigned int x)
 {
   return (x ^ 0x1234) - (unsigned int)INT_MIN;
 }
-#ifndef __SDCC_pdk14 // Lack of memory
-#if !(defined (__SDCC_pdk15) && defined(__SDCC_STACK_AUTO)) // Lack of code memory
+
 int ftest7(int x)
 {
   int y = INT_MIN;
@@ -89,12 +92,14 @@ unsigned int ftest8u(unsigned int x)
   return (x ^ y) ^ z;
 }
 
+#if 0 // This tests triggers signed integer overflow, which is undefined behaviour in C (though GCC apparently makes it implementation-defined, and tests for the implementation-defined behaviour here).
 int ftest9(int x)
 {
   int y = INT_MIN;
   int z = 0x1234;
   return (x + y) ^ z;
 }
+#endif
 
 unsigned int ftest9u(unsigned int x)
 {
@@ -103,12 +108,14 @@ unsigned int ftest9u(unsigned int x)
   return (x + y) ^ z;
 }
 
+#if 0 // This tests triggers signed integer overflow, which is undefined behaviour in C (though GCC apparently makes it implementation-defined, and tests for the implementation-defined behaviour here).
 int ftest10(int x)
 {
   int y = 0x1234;
   int z = INT_MIN;
   return (x ^ y) + z;
 }
+#endif
 
 unsigned int ftest10u(unsigned int x)
 {
@@ -130,8 +137,6 @@ unsigned int ftest12u(unsigned int x)
   unsigned int z = (unsigned int)INT_MIN;
   return (x ^ y) - z;
 }
-#endif
-#endif
 
 void ftest(int a, int b)
 {
@@ -139,21 +144,21 @@ void ftest(int a, int b)
     ASSERT (0);
   if (ftest2(a) != b)
     ASSERT (0);
+#if 0 // This tests triggers signed integer overflow, which is undefined behaviour in C (though GCC apparently makes it implementation-defined, and tests for the implementation-defined behaviour here).
   if (ftest3(a) != b)
     ASSERT (0);
   if (ftest4(a) != b)
     ASSERT (0);
-#ifndef __SDCC_pdk14 // Lack of memory
-#if !(defined (__SDCC_pdk15) && defined(__SDCC_STACK_AUTO)) // Lack of code memory
+#endif
   if (ftest7(a) != b)
     ASSERT (0);
   if (ftest8(a) != b)
     ASSERT (0);
+#if 0 // This tests triggers signed integer overflow, which is undefined behaviour in C (though GCC apparently makes it implementation-defined, and tests for the implementation-defined behaviour here).
   if (ftest9(a) != b)
     ASSERT (0);
   if (ftest10(a) != b)
     ASSERT (0);
-#endif
 #endif
 }
 
@@ -171,8 +176,6 @@ void ftestu(unsigned int a, unsigned int b)
     ASSERT (0);
   if (ftest6u(a) != b)
     ASSERT (0);
-#ifndef __SDCC_pdk14 // Lack of memory
-#if !(defined (__SDCC_pdk15) && defined(__SDCC_STACK_AUTO)) // Lack of code memory
   if (ftest7u(a) != b)
     ASSERT (0);
   if (ftest8u(a) != b)
@@ -185,15 +188,11 @@ void ftestu(unsigned int a, unsigned int b)
     ASSERT (0);
   if (ftest12u(a) != b)
     ASSERT (0);
-#endif
-#endif
 }
 
 void
 testTortureExecute (void)
 {
-#if !(defined(__clang__) && __clang_major__ <= 11)
-
 #if INT_MAX == 2147483647
   ftest(0x00000000,0x80001234);
   ftest(0x00001234,0x80000000);
@@ -226,6 +225,4 @@ testTortureExecute (void)
 #endif
 
   return;
-
-#endif // __clang__
 }
